namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-explorations
  labels:
    istio-injection: enabled
